[gd_scene load_steps=5 format=3 uid="uid://co1wovjwlw4i0"]

[ext_resource type="Script" path="res://scenes/enemies/yellow/yellow_enemy.gd" id="1_ummuh"]
[ext_resource type="Texture2D" uid="uid://ba5igijo760f4" path="res://assets/enemies/yellow1.png" id="2_qca5p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wa65p"]
radius = 15.9784

[sub_resource type="CircleShape2D" id="CircleShape2D_5trfe"]
radius = 14.7886

[node name="YellowEnemy" type="CharacterBody2D"]
position = Vector2(589, 348)
scale = Vector2(2.34, 2.34)
collision_layer = 4
collision_mask = 33
script = ExtResource("1_ummuh")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.874559, 0.329653, 1)
scale = Vector2(0.33, 0.33)
texture = ExtResource("2_qca5p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(3.465, 3.465)
shape = SubResource("CircleShape2D_wa65p")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="RunTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(10, 10)
shape = SubResource("CircleShape2D_5trfe")
debug_color = Color(0.652227, 0.420774, 0.7872, 0.42)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="RunTimer" to="." method="_on_run_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
